data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/GuiSelectWorld.md
---
title: "GuiSelectWorld"
description: "public class GuiSelectWorld extends GuiScreen implements GuiYesNoCallback"
package: "net/minecraft/client/gui"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/GuiSelectWorld.html"
sourceType: javadoc
---

# GuiSelectWorld

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.GuiSelectWorld

## Class signature

```java
public class GuiSelectWorld extends GuiScreen implements GuiYesNoCallback
```

## Constructors

- `GuiSelectWorld(GuiScreen p_i1054_1_)`

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `void confirmClicked(boolean p_73878_1_, int p_73878_2_)`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `protected java.lang.String func_146614_d(int p_146614_1_)`
- `void func_146615_e(int p_146615_1_)`
- `void func_146618_g()`
- `protected java.lang.String func_146621_a(int p_146621_1_)`
- `static GuiYesNo func_152129_a(GuiYesNoCallback p_152129_0_, java.lang.String p_152129_1_, int p_152129_2_)`
- `void initGui()`

## Fields

- `protected java.lang.String field_146628_f`
- `protected GuiScreen field_146632_a`
